--- a/index.html
+++ b/index.html
@@ -1,37 +1,60 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>The Time</title>
+
+    <meta charset="utf-8">
+    <title>THE TIME LOL</title>
+    <meta name="description" content="The current time, no ads, no analytics">
+    <meta name="author" content="Stephen Hoogendijk">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
         integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ=="
         crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="time.css" />
+    <link rel="stylesheet" href="normalise.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
         integrity="sha512-rmZcZsyhe0/MAjquhTgiUcb4d9knaFc7b5xAfju483gbEXTkeJRUMIPk6s3ySZMYUHEcjKbjLjyddGWMrNEvZg=="
         crossorigin="anonymous"></script>
     <script type="application/javascript" src="time.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/lepture/github-cards@latest/jsdelivr/widget.js"></script>
+
+    <link rel="icon" type="image/png" href="favicon.ico">
+
 </head>
 
 <body onload="timer()">
-    <!-- .container is main centered wrapper -->
     <div class="container">
-
-        <!-- columns should be the immediate child of a .row -->
         <div class="row">
-            <div class="twelve column">
-                <h1>The time is</h1>
+            <div class="twelve column" style="margin-top: 1%;">
+                <div class="title">
+                    <h1>The time is:</h1>
+
+                </div>
             </div>
         </div>
         <div class="row">
             <div class="six column">
+                <div id="date" class="time"></div>
                 <div id="timer2" class="time"></div>
-            </div>
-            <div class="six column">
                 <div id="timer" class="time"></div>
             </div>
         </div>
-    </div>
+        <div class="row">
+            <div id="footer" class="twelve column">
+                <h1>Me</h1>
+                <div class="github-card" data-github="thecodeassassin" data-width="400" data-height="317"
+                    data-theme="medium"></div>
+                <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+            </div>
+        </div>
+    </div> <!-- end primary div.container -->
+
+
+
 </body>
 
-</html>>
+</html>
