--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
         <div class="row">
             <div id="footer" class="twelve column">
                 <h1>Me</h1>
-                <div class="github-card" data-github="thecodeassassin" data-width="400" data-height="317"
-                    data-theme="medium"></div>
-                <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+                <span><a href="https://github.com/thecodeassassin" target="_blank">thecodeassassin</a></span>
             </div>
         </div>
     </div> <!-- end primary div.container -->
