--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="normalise.css" />
     <link rel="stylesheet" href="time.css" />
-    <script src="js/moment.js"></script>
-    <script src="js/moment-tz.js"></script>
-    <script type="application/javascript" src="time.js"></script>
-    <script type="application/javascript" src="check.js"></script>
+    <script src="js/moment.js" defer></script>
+    <script src="js/moment-tz.js" defer></script>
+    <script type="application/javascript" src="time.js" defer></script>
+    <script type="application/javascript" src="check.js" defer></script>
 
     <link rel="icon" type="image/png" href="favicon.ico">
 
