--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div id="footer" class="twelve column center">
                 <h2>About</h2>
                 <p><a href="https://github.com/thecodeassassin" target="_blank">thecodeassassin</a><br />
-                <a href="javascript:void(0);" onclick="alert('What?! Unicorns?!'); unicorns();" id="expecations">I was expecating something else</a><br />
+                <a href="javascript:void(0);" onclick="alert('What?! Unicorns?!'); unicorns();" id="expecations">I was expecting something else</a><br />
                 <a href="https://github.com/thecodeassassin/time" target="_blank">The sauce</a><br />
                 </p>
             </div>
